# spark-aggregation-poc

./: .gitignore  dbx_notebook  dbx_notebook.py  dbx_notebook_prod.py  dbx_notebook_prod_sofi.py  dbx_notebook_prod_unilever.py  dbx_notebook_unilever_perf.py  pyproject.toml
bak/data/: aggregation_query1.sql  aggregation_query1_pre_partition.sql  carlsberg_rules.json  db_bakup.dump  raw_join_query1_carlsberg.sql
databricks/notebooks/: dbx_notebook_dev.py  dbx_notebook_parameterized.py  dbx_notebook_prod.py  dbx_notebook_prod_sofi.py  dbx_notebook_prod_unilever.py  dbx_notebook_unilever_perf.py
databricks/workflows/: customer_aggregation_parallel_for_each.yaml  customer_aggregation_parallel_workflow.yaml  customer_aggregation_workflow.json  run_aggregation_all_customers.yaml  test_job.yml
notebooks/: dbx_notebook_dev.py
src/spark_aggregation_poc/: main.py  run_aggregation.py
src/spark_aggregation_poc/config/: config.py  config.yaml
src/spark_aggregation_poc/dal/: FileDal.py  catalog_dal.py  catalog_repository.py  read_service.py  read_service_individual_tables_multi_connections_batches.py  read_service_individual_tables_save_catalog.py  read_service_pre_partition.py  read_service_raw.py  read_service_raw_join.py  read_service_raw_join_multi_connections.py  read_service_raw_join_multi_connections_batches.py  relational_dal.py  (+2 more)
tests/: test_aggregation_component.py  test_config_example.py  test_correct_association.py  test_correct_association_full_data.py  test_initial_aggregation.py  test_valid_output_schemas.py
tests/base/: test_aggregation_base.py
(+42 files in other folders)
